--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -18,7 +18,7 @@
 @import "cmps/weather-icon";
 @import "cmps/user-weather";
 @import "cmps/weather-details";
-@import "cmps/popup";
+@import "cmps/modal";
 // @import "cmps/contact-preview";
 // @import "cmps/contact-list";
 // @import "cmps/contact-filter";
