--- a/src/assets/scss/basics/_base.scss
+++ b/src/assets/scss/basics/_base.scss
@@ -52,6 +52,10 @@ button {
 input {
   font-family: inherit;
   text-align: inherit;
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 }
 
 // MAC like scrollbar
